[gd_scene load_steps=8 format=3 uid="uid://b6gsmty5ljyvi"]

[ext_resource type="Script" path="res://UI/Shops/ShopSlot.gd" id="1_23y1y"]
[ext_resource type="Script" path="res://UI/Shops/ShopSlotAndDesc.gd" id="1_e7fbu"]
[ext_resource type="Texture2D" uid="uid://b6rv0lre2ekv6" path="res://Assets/SoldOut.png" id="2_q2cpt"]
[ext_resource type="PackedScene" uid="uid://ds50h3s6ktcn6" path="res://UI/Shops/item_description_panel.tscn" id="3_0ejk6"]

[sub_resource type="Animation" id="Animation_b8ph1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ItemDescriptionPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/ItemDescriptionPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.501961)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/ItemDescriptionPanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lnpkc"]
resource_name = "item fade in"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ItemDescriptionPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/ItemDescriptionPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/ItemDescriptionPanel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vp2np"]
_data = {
"RESET": SubResource("Animation_b8ph1"),
"item fade in": SubResource("Animation_lnpkc")
}

[node name="ShopPanel" type="PanelContainer" node_paths=PackedStringArray("image", "price_label")]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -56.0
offset_right = 50.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_23y1y")
image = NodePath("MarginContainer/TextureRect")
price_label = NodePath("PriceLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_q2cpt")
expand_mode = 4
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 8
text = "1000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_e7fbu")

[node name="ItemDescriptionPanel" parent="Control" instance=ExtResource("3_0ejk6")]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
offset_left = -100.0
offset_top = -210.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(150, 100)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_vp2np")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="Control" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="Control" method="_on_mouse_exited"]
